test/errors/error43.vult
fun foo (x, y) {
  match (x, y) {
    1 -> return 0;
    (3, _) -> return 1;
    _ -> return 2;
  }
}
